web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-expr-param-lhs/module-parent-async-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,39)
2|    const child = async function name(await) {
 |                                     ^
